# shapemaker-3

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/shapemaker/: __init__.py
tests/: test_package_metadata.py
